--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,4 +7,4 @@ Author: Christopher T. Kenny
 Maintainer: Christopher T. Kenny <christopherkenny@fas.harvard.edu>
 Description: A compilation of tools to complete common tasks for studying gerrymandering. This focuses on the geographic tool side of common problems, such as linking different levels of spatial units or estimating how to break up units.
 License: MIT + file LICENSE
-
+RoxygenNote: 7.1.1
