--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,25 +7,44 @@ export(estimate_down)
 export(geo_estimate_down)
 export(geo_filter)
 export(geo_match)
+export(geo_plot_group)
 export(geo_trim)
 export(st_centerish)
 export(suggest_component_connection)
 export(suggest_neighbors)
 importFrom(dplyr,all_of)
+importFrom(dplyr,any_of)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
+importFrom(dplyr,ungroup)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_sf)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,theme_void)
 importFrom(magrittr,"%>%")
 importFrom(nngeo,st_nn)
+importFrom(sf,"st_geometry<-")
 importFrom(sf,st_area)
 importFrom(sf,st_centroid)
+importFrom(sf,st_distance)
+importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_intersects)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_point_on_surface)
+importFrom(sf,st_within)
 importFrom(stringr,str_detect)
 importFrom(tibble,tibble)
 importFrom(tidycensus,get_decennial)
