--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,11 +2,16 @@
 
 export(add_edge)
 export(block2prec)
+export(block2prec_by_county)
 export(check_contiguity)
+export(compare_adjacencies)
 export(count_connections)
 export(create_block_table)
+export(create_tract_table)
 export(estimate_down)
+export(estimate_up)
 export(geo_estimate_down)
+export(geo_estimate_up)
 export(geo_filter)
 export(geo_match)
 export(geo_plot_group)
@@ -22,6 +27,7 @@ export(suggest_component_connection)
 export(suggest_neighbors)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
+importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,distinct)
@@ -30,9 +36,11 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
+importFrom(dplyr,starts_with)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
@@ -59,7 +67,9 @@ importFrom(sf,st_relate)
 importFrom(sf,st_union)
 importFrom(sf,st_within)
 importFrom(stringr,str_detect)
+importFrom(tibble,add_row)
 importFrom(tibble,tibble)
+importFrom(tidycensus,get_acs)
 importFrom(tidycensus,get_decennial)
 importFrom(tidyr,pivot_wider)
 importFrom(tigris,blocks)
