--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,5 +22,10 @@ Imports: Rcpp,
   ggplot2
 Depends: 
     R (>= 2.10)
+Suggests:
+  redist,
+  knitr,
+  rmarkdown
+VignetteBuilder: knitr
 LazyData: true
 Encoding: UTF-8
