--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(compare_adjacencies)
 export(count_connections)
 export(create_block_table)
 export(create_tract_table)
+export(dra2r)
 export(estimate_down)
 export(estimate_up)
 export(geo_estimate_down)
@@ -22,6 +23,7 @@ export(global_morans)
 export(gstar_i)
 export(local_gearys)
 export(local_morans)
+export(r2dra)
 export(st_centerish)
 export(suggest_component_connection)
 export(suggest_neighbors)
@@ -30,11 +32,13 @@ importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,desc)
 importFrom(dplyr,distinct)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,row_number)
@@ -52,10 +56,13 @@ importFrom(ggplot2,scale_fill_brewer)
 importFrom(ggplot2,theme_void)
 importFrom(magrittr,"%>%")
 importFrom(nngeo,st_nn)
+importFrom(readr,read_csv)
+importFrom(readr,write_csv)
 importFrom(sf,"st_geometry<-")
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_centroid)
+importFrom(sf,st_crs)
 importFrom(sf,st_distance)
 importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
@@ -64,6 +71,7 @@ importFrom(sf,st_intersects)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_point_on_surface)
 importFrom(sf,st_relate)
+importFrom(sf,st_transform)
 importFrom(sf,st_union)
 importFrom(sf,st_within)
 importFrom(stringr,str_detect)
