more descriptive racial groupings for dec

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(gstar_i)
 export(local_gearys)
 export(local_morans)
 export(r2dra)
+export(split_precinct)
 export(st_centerish)
 export(suggest_component_connection)
 export(suggest_neighbors)
