fix all the broken pieces

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(split_precinct)
 export(st_centerish)
 export(suggest_component_connection)
 export(suggest_neighbors)
+importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
 importFrom(dplyr,arrange)
