--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ importFrom(sf,st_drop_geometry)
 importFrom(sf,st_geometry)
 importFrom(sf,st_intersection)
 importFrom(sf,st_intersects)
+importFrom(sf,st_make_valid)
 importFrom(sf,st_nearest_feature)
 importFrom(sf,st_point_on_surface)
 importFrom(sf,st_relate)
