--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geomander
 Type: Package
 Title: Geographic Tools for Studying Gerrymandering
-Version: 1.0.4
-Date: 2021-05-03
+Version: 1.0.5
+Date: 2021-06-01
 Authors@R: person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu",
                   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860"))
 Description: A compilation of tools to complete common tasks for studying gerrymandering. This focuses on the geographic tool side of common problems, such as linking different levels of spatial units or estimating how to break up units.
@@ -27,8 +27,11 @@ Imports: Rcpp,
 Depends: 
     R (>= 2.10)
 Suggests:
-  redist,
-  knitr,
-  rmarkdown
+    redist,
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
 LazyData: true
 Encoding: UTF-8
+VignetteBuilder: knitr
+Config/testthat/edition: 3
