get all examples fixed + add concepts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,10 +16,11 @@ export(geo_estimate_down)
 export(geo_estimate_up)
 export(geo_filter)
 export(geo_match)
+export(geo_plot)
 export(geo_plot_group)
 export(geo_sort)
 export(geo_trim)
-export(global_geary)
+export(global_gearys)
 export(global_morans)
 export(gstar_i)
 export(local_gearys)
@@ -52,6 +53,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,geom_sf)
+importFrom(ggplot2,geom_sf_text)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,ggsave)
 importFrom(ggplot2,labs)
