--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(block2prec_by_county)
 export(check_contiguity)
 export(compare_adjacencies)
 export(count_connections)
+export(create_block_group_table)
 export(create_block_table)
 export(create_tract_table)
 export(dra2r)
