--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(adjacency)
 export(block2prec)
 export(block2prec_by_county)
 export(check_contiguity)
+export(clean_vest)
 export(compare_adjacencies)
 export(count_connections)
 export(create_block_group_table)
@@ -22,6 +23,7 @@ export(geo_plot)
 export(geo_plot_group)
 export(geo_sort)
 export(geo_trim)
+export(get_vest)
 export(global_gearys)
 export(global_morans)
 export(gstar_i)
@@ -32,6 +34,7 @@ export(split_precinct)
 export(st_centerish)
 export(suggest_component_connection)
 export(suggest_neighbors)
+export(vest_states)
 importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
