alarm & subtract edges

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(add_edge)
 export(adjacency)
+export(alarm_states)
 export(block2prec)
 export(block2prec_by_county)
 export(check_contiguity)
@@ -22,6 +23,7 @@ export(geo_plot)
 export(geo_plot_group)
 export(geo_sort)
 export(geo_trim)
+export(get_alarm)
 export(get_vest)
 export(global_gearys)
 export(global_morans)
