--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,7 @@ Authors@R: person("Christopher T.", "Kenny", email = "christopherkenny@fas.harva
                   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860"))
 Description: A compilation of tools to complete common tasks for studying gerrymandering. This focuses on the geographic tool side of common problems, such as linking different levels of spatial units or estimating how to break up units. Functions exist for creating redistricting-focused data for the US.
 License: MIT + file LICENCE
-URL: https://christopherkenny.github.io/geomander/
+URL: https://www.christophertkenny.com/geomander/
 BugReports: https://github.com/christopherkenny/geomander/issues
 RoxygenNote: 7.1.1
 LinkingTo: Rcpp
