--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: geomander
 Type: Package
 Title: Geographic Tools for Studying Gerrymandering
-Version: 1.1.0.9000
-Date: 2021-09-17
+Version: 1.1.2
+Date: 2021-10-05
 Authors@R: person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu",
                   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860"))
 Description: A compilation of tools to complete common tasks for studying gerrymandering. This focuses on the geographic tool side of common problems, such as linking different levels of spatial units or estimating how to break up units. Functions exist for creating redistricting-focused data for the US.
@@ -20,14 +20,13 @@ Imports:
     tibble,
     tidycensus,
     tidyr,
-    tigris,
+    tigris (>= 1.5),
     ggplot2,
     readr,
     spdep,
     zip,
     dataverse,
     censable,
-    PL94171,
     Rcpp (>= 1.0.7)
 Depends: 
     R (>= 2.10)
