--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(alarm_states)
 export(block2prec)
 export(block2prec_by_county)
 export(check_contiguity)
+export(check_polygon_contiguity)
 export(clean_vest)
 export(compare_adjacencies)
 export(count_connections)
