fix unexported function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(local_morans)
 export(r2dra)
 export(split_precinct)
 export(st_centerish)
+export(subtract_edge)
 export(suggest_component_connection)
 export(suggest_neighbors)
 export(vest_states)
