--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,3 +1,4 @@
+url: https://www.christophertkenny.com/geomander/
 template:
   params:
     bootswatch: journal
@@ -37,3 +38,4 @@ reference:
 - contents:
   - geomander-package
   - lacks_concepts(c("estimate", "datatable", "fix", "estimate", "dra", "spatcorr", "data", "plot"))
+
