--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(geo_plot)
 export(geo_plot_group)
 export(geo_sort)
 export(geo_trim)
+export(geos_centerish)
 export(get_alarm)
 export(get_vest)
 export(global_gearys)
@@ -32,6 +33,10 @@ export(gstar_i)
 export(local_gearys)
 export(local_morans)
 export(r2dra)
+export(seam_adj)
+export(seam_geom)
+export(seam_rip)
+export(seam_sew)
 export(split_precinct)
 export(st_centerish)
 export(subtract_edge)
