--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -4,5 +4,8 @@ pkgdown_sha: ~
 articles:
   Merging_Election_Data: Merging_Election_Data.html
   Redistricting_School_Districts: Redistricting_School_Districts.html
-last_built: 2021-11-25T06:03Z
+last_built: 2021-11-28T02:05Z
+urls:
+  reference: https://www.christophertkenny.com/geomander//reference
+  article: https://www.christophertkenny.com/geomander//articles
 
