--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -45,5 +45,4 @@ reference:
   desc: Functions that don't really fit elsewhere
 - contents:
   - geomander-package
-  - lacks_concepts(c("estimate", "datatable", "fix", "estimate", "dra", "spatcorr", "data", "plot"))
-
+  - lacks_concepts(c("estimate", "datatable", "fix", "estimate", "dra", "spatcorr", "data", "plot", "datasets", "seam", "center"))
