--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(adjacency)
 export(alarm_states)
 export(block2prec)
 export(block2prec_by_county)
+export(ccm)
+export(cct)
 export(check_contiguity)
 export(check_polygon_contiguity)
 export(clean_vest)
@@ -25,6 +27,7 @@ export(geo_plot_group)
 export(geo_sort)
 export(geo_trim)
 export(geos_centerish)
+export(geos_circle_center)
 export(get_alarm)
 export(get_vest)
 export(global_gearys)
@@ -39,6 +42,7 @@ export(seam_rip)
 export(seam_sew)
 export(split_precinct)
 export(st_centerish)
+export(st_circle_center)
 export(subtract_edge)
 export(suggest_component_connection)
 export(suggest_neighbors)
