--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export("%>%")
 export(add_edge)
 export(adjacency)
 export(alarm_states)
+export(baf_to_vtd)
 export(block2prec)
 export(block2prec_by_county)
 export(ccm)
@@ -79,6 +80,9 @@ importFrom(ggplot2,theme_void)
 importFrom(magrittr,"%>%")
 importFrom(readr,read_csv)
 importFrom(readr,write_csv)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(rlang,.env)
 importFrom(sf,"st_geometry<-")
 importFrom(stringr,str_detect)
 importFrom(tibble,add_row)
