--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ export(subtract_edge)
 export(suggest_component_connection)
 export(suggest_neighbors)
 export(vest_states)
+importFrom(Rcpp,evalCpp)
 importFrom(dplyr,.data)
 importFrom(dplyr,all_of)
 importFrom(dplyr,any_of)
