--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(gstar_i)
 export(local_gearys)
 export(local_morans)
 export(r2dra)
+export(regionalize)
 export(seam_adj)
 export(seam_geom)
 export(seam_rip)
