--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: A compilation of tools to complete common tasks for studying gerrym
 License: MIT + file LICENCE
 URL: https://www.christophertkenny.com/geomander/, https://github.com/christopherkenny/geomander
 BugReports: https://github.com/christopherkenny/geomander/issues
-RoxygenNote: 7.2.0
+RoxygenNote: 7.2.1
 LinkingTo: Rcpp (>= 1.0.7)
 Imports:
     dplyr,
@@ -18,7 +18,7 @@ Imports:
     stringr,
     tibble,
     tidyr,
-    tigris (>= 1.5),
+    tinytiger,
     ggplot2,
     readr,
     dataverse,
