--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,7 @@ Description: A compilation of tools to complete common tasks for studying gerrym
 License: MIT + file LICENCE
 URL: https://www.christophertkenny.com/geomander/, https://github.com/christopherkenny/geomander
 BugReports: https://github.com/christopherkenny/geomander/issues
+Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 LinkingTo: Rcpp (>= 1.0.7)
 Imports:
