start heda revision

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(ccm)
 export(cct)
 export(check_contiguity)
 export(check_polygon_contiguity)
+export(clean_heda)
 export(clean_vest)
 export(compare_adjacencies)
 export(count_connections)
@@ -30,10 +31,12 @@ export(geo_trim)
 export(geos_centerish)
 export(geos_circle_center)
 export(get_alarm)
+export(get_heda)
 export(get_vest)
 export(global_gearys)
 export(global_morans)
 export(gstar_i)
+export(heda_states)
 export(local_gearys)
 export(local_morans)
 export(r2dra)
