--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,6 @@ export(ccm)
 export(cct)
 export(check_contiguity)
 export(check_polygon_contiguity)
-export(clean_heda)
 export(clean_vest)
 export(compare_adjacencies)
 export(count_connections)
@@ -31,6 +30,7 @@ export(geo_trim)
 export(geos_centerish)
 export(geos_circle_center)
 export(get_alarm)
+export(get_dra)
 export(get_heda)
 export(get_vest)
 export(global_gearys)
