--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -1,4 +1,4 @@
-url: https://www.christophertkenny.com/geomander/
+url: https://christophertkenny.com/geomander
 template:
   params:
     bootswatch: journal
