--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,13 @@ Package: geomander
 Type: Package
 Title: Geographic Tools for Studying Gerrymandering
 Version: 2.2.0
-Date: 2023-01-05
+Date: 2023-04-05
 Authors@R: person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu",
                   role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860"))
-Description: A compilation of tools to complete common tasks for studying gerrymandering. This focuses on the geographic tool side of common problems, such as linking different levels of spatial units or estimating how to break up units. Functions exist for creating redistricting-focused data for the US.
+Description: A compilation of tools to complete common tasks for studying gerrymandering. 
+    This focuses on the geographic tool side of common problems, such as linking 
+    different levels of spatial units or estimating how to break up units. Functions 
+    exist for creating redistricting-focused data for the US.
 License: MIT + file LICENCE
 URL: https://christophertkenny.com/geomander/, https://github.com/christopherkenny/geomander
 BugReports: https://github.com/christopherkenny/geomander/issues
