--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(geos_circle_center)
 export(get_alarm)
 export(get_dra)
 export(get_heda)
+export(get_lewis)
 export(get_vest)
 export(global_gearys)
 export(global_morans)
