add support for downloading rpvnearme data

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(get_alarm)
 export(get_dra)
 export(get_heda)
 export(get_lewis)
+export(get_rpvnearme)
 export(get_vest)
 export(global_gearys)
 export(global_morans)
