--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,8 +3,12 @@ Type: Package
 Title: Geographic Tools for Studying Gerrymandering
 Version: 2.2.1
 Date: 2023-04-16
-Authors@R: person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu",
-                  role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860"))
+Authors@R: c(
+    person("Christopher T.", "Kenny", email = "christopherkenny@fas.harvard.edu",
+            role = c("aut", "cre"), comment = c(ORCID = "0000-0002-9386-6860")),
+    person("Cory", "McCartan", email = "corymccartan@nyu.edu",
+            role = "ctb", comment = c(ORCID = "0000-0002-6251-669X"))
+            )
 Description: A compilation of tools to complete common tasks for studying gerrymandering. 
     This focuses on the geographic tool side of common problems, such as linking 
     different levels of spatial units or estimating how to break up units. Functions 
