--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,8 +42,10 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 3.0.0),
-    RcppSimdJson
+    RcppSimdJson,
+    spelling
 LazyData: true
 Encoding: UTF-8
 VignetteBuilder: knitr
 Config/testthat/edition: 3
+Language: en-US
