--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 LinkingTo: Rcpp (>= 1.0.7)
 Imports:
+    baf,
     censable,
     cli,
     dataverse,
